[workspace]
resolver = "2"
members = ["app", "enclave", "mock-lib"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://www.ata.network/"

[workspace.dependencies]
automata-sgx-sdk = { git = "https://github.com/automata-network/automata-sgx-sdk", branch = "main" }
automata-build-script = { git = "https://github.com/automata-network/automata-sgx-sdk", branch = "main" }

mock-lib = { path = "mock-lib" }

hex = "0.4"
clap = "3.2"
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.0"
serde = "1"
serde_json = "1"
serde_with = { version = "3.6", default-features = false }
tiny-keccak = "2.0.2"
thiserror = "2.0.12"
ruint = "1.12.0"

bytes = "1.5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }


rlp = "0.6.1"


