[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[features]
# The `tstd_enclave` feature is requested by the automata_sgx_sdk
tstd_enclave = ["automata-sgx-sdk/tstd_enclave"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[dependencies]
automata-sgx-sdk.workspace = true

hex.workspace = true
clap = { workspace = true,  features = ["derive", "env"]  }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

sgx-ocalls.workspace = true
tls-enclave.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
primitive-types = {workspace = true, features = ["serde", "rlp"] }
anyhow.workspace = true
tiny-keccak = {workspace = true, features = ["keccak"] }
thiserror.workspace = true

alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true
alloy-primitives.workspace = true

rlp.workspace = true
