[package]
name = "enclave"
version = "0.1.0"
edition = "2021"

[features]
# The `tstd_enclave` feature is requested by the automata_sgx_sdk
tstd_enclave = ["automata-sgx-sdk/tstd_enclave"]

[lib]
name = "enclave"
crate-type = ["staticlib"]

[dependencies]
automata-sgx-sdk.workspace = true

hex.workspace = true
clap = { workspace = true,  features = ["derive", "env"]  }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

sgx-ocalls.workspace = true
tls-enclave.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true, default-features = false, features = ["macros"] }
anyhow.workspace = true
tiny-keccak = {workspace = true, features = ["keccak"] }
thiserror.workspace = true

ruint =  { workspace = true, features = ["rlp"]}


rlp.workspace = true
bytes = { workspace = true, features = ["serde"] }

